--- a/package.json
+++ b/package.json
@@ -38,6 +38,11 @@
   "dependencies": {
     "@apollo/client": "^3.2.1",
     "@reach/router": "^1.3.4",
+    "@types/bcrypt": "^3.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/react-select": "^3.0.22",
+    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "graphql": "^15.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
