--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
     "@reach/router": "^1.3.4",
     "@types/bcrypt": "^3.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/react-router-dom": "^5.1.6",
     "@types/react-select": "^3.0.22",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "graphql": "^15.3.0",
-    "react": "^16.13.1",
+    "react": "^17.0.1",
     "react-dom": "^16.13.1",
     "react-responsive": "^8.1.0",
     "styletron-engine-monolithic": "0.0.3",
