Implement account integration with Plaid service

--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "graphql": "^15.3.0",
+    "plaid": "^8.0.0",
     "react": "^17.0.1",
     "react-dom": "^16.13.1",
+    "react-plaid-link": "^3.0.0",
     "react-responsive": "^8.1.0",
     "styletron-engine-monolithic": "0.0.3",
     "styletron-react": "^5.2.7",
