Add currency symbol and sort by currency -> name

--- a/package.json
+++ b/package.json
@@ -44,12 +44,15 @@
     "@types/react-select": "^3.0.22",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
+    "currency-symbol-map": "^4.0.4",
     "graphql": "^15.3.0",
     "plaid": "^8.0.0",
     "react": "^17.0.1",
+    "react-currency-input-field": "^2.4.1",
     "react-dom": "^16.13.1",
     "react-plaid-link": "^3.0.0",
     "react-responsive": "^8.1.0",
+    "react-select": "^3.1.0",
     "styletron-engine-monolithic": "0.0.3",
     "styletron-react": "^5.2.7",
     "subscriptions-transport-ws": "^0.9.18",
